test/errors/type/int/tobool.yasl
echo mt.lookup(0, .tobool)(1.0)
